[add] テスト関連のコードを追加
TestFXなどのコードを追加しました。