@@ -14,6 +14,7 @@ plugins {
     id 'org.beryx.jlink' version '2.25.0'
     id 'checkstyle'
     id 'com.github.spotbugs' version '6.0.22'
+    id 'jacoco'
 }
 
 
@@ -26,6 +27,8 @@ repositories {
 
 ext {
     junitVersion = '5.10.0'
+    moduleName = 'jp.udonbei.udonpasuta'
+    junitModuleName = 'org.junit.jupiter.api'
 }
 
 sourceCompatibility = '21'
@@ -58,10 +61,24 @@ dependencies {
     //runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:linux"
 
     implementation 'ch.qos.logback:logback-classic:1.5.6'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.0'
+
+    testImplementation 'org.testfx:testfx-junit5:4.0.18'
+    testImplementation 'org.hamcrest:hamcrest:2.1'
 }
 
 test {
     useJUnitPlatform()
+
+    doFirst {
+        jvmArgs = [
+                '--add-reads', 'jp.udonbei.udonpasuta=org.testfx.junit5,org.testfx',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.application=org.testfx',
+                '--add-opens', 'javafx.graphics/com.sun.javafx.application=org.testfx'
+        ]
+    }
 }
 
 jlink {
@@ -112,6 +129,21 @@ checkstyle {
 
 spotbugs {
     excludeFilter = rootProject.file('config/spotbugs/exclude.xml')
+}
+
+compileTestJava {
+    doFirst {
+        options.compilerArgs.addAll(Arrays.asList(
+                '--add-modules', 'org.testfx.junit5',
+                '--add-reads', 'jp.udonbei.udonpasuta=org.testfx.junit5, org.testfx'))
+    }
+}
+
+tasks.spotbugsMain {
+    reports.create("html") {
+        required = true
+        outputLocation = rootProject.file("build/reports/spotbugs/main.html")
+    }
 }
 
 tasks.register('buildCount') {
